--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -1,13 +1,13 @@
-*, body {
+* {
     margin: 0;
     box-sizing: border-box;
+}
+body {
     font-family: 'Roboto', sans-serif;
     color:#382c20; 
     letter-spacing: 0.02rem;
     font-weight: 300;
-    /*border: solid red 1px*/
 }
-
 /* Header */
 
 header {
@@ -79,17 +79,17 @@ span {
 
 /* Bokser til tekst*/
 .box1 {
-    margin: 5rem;
+    margin: 2rem 6rem;
     font-size: 1.1rem;
     letter-spacing: 0.02rem;
-    line-height: 1.5rem;
+    line-height: 2rem;
 
 }
 .box2 {
-    margin: 5rem;
+    margin: 2rem 6rem;
     font-size: 1.1rem;
     letter-spacing: 0.02rem;
-    line-height: 1.5rem;
+    line-height: 2rem;
 
 }
 
