--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -90,7 +90,12 @@ span {
     font-size: 1.1rem;
     letter-spacing: 0.02rem;
     line-height: 2rem;
-
+}
+.box3 {
+    margin: 2rem 6rem;
+    font-size: 1.1rem;
+    letter-spacing: 0.02rem;
+    line-height: 2rem;
 }
 
 /*Bilder*/
