--- a/style/bookingstyle.css
+++ b/style/bookingstyle.css
@@ -33,7 +33,7 @@ header {
 /* Navbar */
 .navbar-home {
     text-align: center;
-    padding: 1.5rem 0 1.5rem 0;
+    padding: 1.5rem;
 }
 
 .navbar-home a {
@@ -57,7 +57,7 @@ header {
 /* Fotograf headerbilde: Zakaria Zayane. Kilde https://unsplash.com/photos/0uAVsDcyD0M */
 .headerbilde img {
     width: 100%;
-    height: 50rem;
+    height: 40rem;
     object-fit: cover;
 }
 
