--- a/style/brukervennlighetstyle.css
+++ b/style/brukervennlighetstyle.css
@@ -21,13 +21,13 @@ header {
 
 .logo img {
     width: 20rem;
-    padding-top: 3rem;
+    padding-top: 1.5rem;
 }
 
 /* Navbar */
 .navbar-home {
     text-align: center;
-    padding: 3rem 0 2rem 0;
+    padding: 1.5rem;
 }
 
 .navbar-home a {
